--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ body {
 .mymeta .mymeta-title {
     margin-top: 1em;
     text-transform: uppercase;
-    font-size: .8em;
+    font-size: 15px;
     opacity: .8;
     font-weight: 400;
 }
@@ -70,6 +70,7 @@ details > summary {
 
 .alinea {
 	text-align: justify;
+    font-size: 15px;
 }
 
 .footer {
