--- a/mrfahlevi/style.css
+++ b/mrfahlevi/style.css
@@ -23,7 +23,7 @@ nav > a {
 
 .cover-container {
     background-color: #313352;
-    background-image: url(www/particles.png);
+    background-image: url(www/cover.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -83,7 +83,7 @@ nav > a {
     border-radius: 14%;
     max-width: 240px;
     max-height: 240px;
-	margin-right: 5px;
+    margin-right: 5px;
 }
 
 /* How it's looks in mobile screen */
@@ -141,7 +141,7 @@ div.vcard-description span, a {
 
 .profile-name {
     text-transform: capitalize;
-	margin-top: 0;
+    margin-top: 0;
 }
 
 /* Social Media */
